--- a/examples/index.html
+++ b/examples/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Vuex Examples</title>
     <link rel="stylesheet" href="/global.css">
-  </head>
-  <body style="padding: 0 20px">
+</head>
+
+<body style="padding: 0 20px">
     <h1>Vuex Examples</h1>
     <ul>
-      <li><a href="counter">Counter</a></li>
-      <li><a href="counter-hot">Counter with Hot Reload</a></li>
-      <li><a href="shopping-cart">Shopping Cart</a></li>
-      <li><a href="todomvc">TodoMVC</a></li>
-      <li><a href="chat">FluxChat</a></li>
-      <li><a href="ttt.html">FluxChat</a></li>
-      <li><a href="xxx">xxx</a></li>
-      <li><a href="search">search</a></li>
+        <li><a href="counter">Counter</a></li>
+        <li><a href="counter-hot">Counter with Hot Reload</a></li>
+        <li><a href="shopping-cart">Shopping Cart</a></li>
+        <li><a href="todomvc">TodoMVC</a></li>
+        <li><a href="chat">FluxChat</a></li>
+        <li><a href="ttt.html">FluxChat</a></li>
+        <li><a href="xxx">xxx</a></li>
+        <li><a href="search">search</a></li>
+        <li><a href="swiper">swiper</a></li>
     </ul>
-  </body>
+</body>
+
 </html>
